log
Sun 30 Apr 2023 07:15:58 PM UTC: 
 tests:  0|5
total_score: 0/70
97e1234
Sun 30 Apr 2023 07:53:11 PM UTC: 
 sudoku.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:58:1: error: control reaches end of non-void function [-Werror=return-type]
   58 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
60ccffe
